tidos/tests/attributes/panics/invalid_toggle_value.stderr
error: Unable to have a toggle attribute from a literal, change it into the following:
       :checked
       :checked={ bool }
       checked="not a bool"
       checked={ "not a bool" }
 --> tests/attributes/panics/invalid_toggle_value.rs:6:59
  |
6 |             <input type="radio" name="day" value="monday" :checked="not a bool" />
  |                                                                    ^^^^^^^^^^^^
